Add arg line overrides for failsafe plugin